--- a/agilepage.html
+++ b/agilepage.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>RaiseTheRoof</h1>
+<p>Lenister House Wednesday Oct 3 12.30Pm - 2Pm.</p>
 
 </body>
 </html>
